--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - cython
     - toolchain
     - numpy x.x
-    - numpy >=1.12
+    - numpy ==1.12
   run:
     - python
     - scikit-learn
@@ -32,7 +32,7 @@ requirements:
     - h5py
     - matplotlib
     - numpy x.x
-    - numpy >=1.12
+    - numpy ==1.12
     - glimix-core >=1.2.19
     - limix-core >=1.0.1
     - limix-legacy >=0.8.12
