numpy require star

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,8 +22,7 @@ requirements:
     - setuptools
     - cython
     - toolchain
-    - numpy x.x
-    - numpy ==1.12
+    - numpy 1.11.*
   run:
     - python
     - scikit-learn
@@ -31,9 +30,8 @@ requirements:
     - scipy >=0.19.1
     - h5py
     - matplotlib
-    - numpy x.x
-    - numpy ==1.12
-    - glimix-core >=1.2.19
+    - numpy >=1.11
+    - glimix-core 1.2.*
     - limix-core >=1.0.1
     - limix-legacy >=0.8.12
     - scikit-learn
