--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,26 +22,26 @@ requirements:
     - setuptools
     - cython
     - toolchain
-    - numpy 1.14.*
+    - numpy
   run:
     - python
     - scikit-learn
     - pandas
-    - scipy >=0.19.1
+    - scipy
     - h5py
     - matplotlib
-    - numpy >=1.14.1
-    - glimix-core 1.2.*
-    - limix-core >=1.0.1
-    - limix-legacy >=0.8.12
+    - numpy
+    - glimix-core
+    - limix-core
+    - limix-legacy
     - scikit-learn
     - dask
-    - pandas-plink >=1.2.1
-    - joblib >=0.11
-    - tqdm >=4.11.2
+    - pandas-plink
+    - joblib
+    - tqdm
     - asciitree
-    - ncephes >=1.0.40
-    - numpy-sugar >=1.0.47
+    - ncephes
+    - numpy-sugar
 
 test:
   requires:
