--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,8 @@ requirements:
     - h5py
     - matplotlib
     - numpy
-    - glimix-core 1.2.*
+    - glimix-core >=1.2.25
+    - glimix-core <1.3.0
     - limix-core
     - limix-legacy
     - scikit-learn
