--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,8 +32,7 @@ requirements:
     - h5py
     - matplotlib
     - numpy
-    - glimix-core >=1.2.25
-    - glimix-core <1.3.0
+    - glimix-core >=1.2.25,<1.3.0
     - limix-core
     - limix-legacy
     - scikit-learn
