--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "limix" %}
-{% set version = "1.0.17" %}
-{% set sha256 = "7426c89e4831575eb7cc09659135c1d8d57b6402d988063b140e02a94d6ffb8d" %}
+{% set version = "1.0.18" %}
+{% set sha256 = "486f55baeeacb204965ed1baf01bf717bb43718240453b884035d526ac4b8bbb<Paste>" %}
 
 package:
   name: {{ name|lower }}
@@ -26,23 +26,32 @@ requirements:
     - numpy
   run:
     - python
-    - scikit-learn
-    - pandas
-    - scipy
-    - h5py
-    - matplotlib
-    - numpy
-    - glimix-core >=1.2.25,<1.3.0
-    - limix-core
-    - limix-legacy
-    - scikit-learn
-    - dask
-    - pandas-plink
-    - joblib
-    - tqdm
-    - asciitree
-    - ncephes
-    - numpy-sugar >=1.2.3
+    - ansicolors>=1.1.8
+    - asciitree>=0.3.3
+    - bgen-reader>=2.0.4
+    - brent-search>=1.0.33
+    - dask[distributed,array,dataframe]>=0.18.1
+    - glimix-core>=1.5.2
+    - h5py>=2.8.0
+    - humanfriendly>=4.12.1
+    - joblib>=0.12.0
+    - limix-plot>=0.0.2
+    - matplotlib>=2.2.2
+    - nb2plots>=0.6
+    - ndarray-listener>=1.1.2
+    - numba>=0.38.1
+    - numpy-sugar>=1.2.5
+    - numpy>=1.14.5
+    - pandas-plink>=1.2.28
+    - pandas>=0.23.3
+    - pypandoc>=1.4
+    - pytest-doctestplus>=0.1.3
+    - pytest>=3.6.3
+    - scikit-learn>=0.19.1
+    - scipy>=1.1.0
+    - seaborn>=0.8.1
+    - statsmodels>=0.9.0
+    - tqdm>=4.23.4
 
 test:
   requires:
