--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [win or linux32]
+  skip: True  # [win and vc<14 or linux32]
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -25,7 +25,6 @@ requirements:
     - toolchain
     - numpy >=1.14.5
   run:
-    - python
     - asciitree >=0.3.3
     - bgen-reader >=2.0.4
     - brent-search >=1.0.33
@@ -34,16 +33,18 @@ requirements:
     - h5py >=2.8.0
     - humanfriendly >=4.12.1
     - joblib >=0.12.0
+    - limix-core >=1.0.2
     - matplotlib >=2.2.2
     - ndarray-listener >=1.1.2
     - numba >=0.38.1
-    - numpy-sugar >=1.2.5
     - numpy  >=1.14.5
-    - pandas-plink >=1.2.28
+    - numpy-sugar >=1.2.5
     - pandas >=0.23.3
+    - pandas-plink >=1.2.28
     - pypandoc >=1.4
-    - pytest-doctestplus >=0.1.3
     - pytest
+    - pytest-doctestplus >=0.1.3
+    - python
     - scikit-learn >=0.19.1
     - scipy >=1.1.0
     - seaborn >=0.8.1
