--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "limix" %}
-{% set version = "1.0.18" %}
-{% set sha256 = "486f55baeeacb204965ed1baf01bf717bb43718240453b884035d526ac4b8bbb" %}
+{% set version = "2.0.2" %}
+{% set sha256 = "80828043550213f33703dbe095c3a3d9888ea2daffb707bcbfcb15537331828a" %}
 
 package:
   name: {{ name|lower }}
@@ -14,43 +14,47 @@ source:
 build:
   number: 0
   skip: True  # [win or linux32]
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: "{{ PYTHON }} -m pip install . --no-deps -vv" 
 
 requirements:
-  build:
+  host:
+    - pip
     - python
     - setuptools
     - pytest-runner
-    - cython
-    - toolchain
-    - numpy >=1.14.5
   run:
+    - ipython
+    - pytest-doctestplus >=0.2.0
+    - seaborn >=0.9.0
     - asciitree >=0.3.3
     - bgen-reader >=2.0.4
     - brent-search >=1.0.33
+    - click>=7.0
     - dask[distributed,array,dataframe] >=0.18.1
-    - glimix-core >=1.5.2
+    - glimix-core >=2.0.3
     - h5py >=2.8.0
-    - humanfriendly >=4.12.1
+    - humanfriendly >=4.16.1
     - joblib >=0.12.0
-    - limix-core >=1.0.2
-    - limix-legacy >=0.8.12
-    - matplotlib >=2.2.2
+    - limix-plot >=0.0.11 # needs recipe
+    - matplotlib >=2.2.3
     - ndarray-listener >=1.1.2
-    - numba >=0.38.1
-    - numpy  >=1.14.5
-    - numpy-sugar >=1.2.5
-    - pandas >=0.23.3
+    - netcdf4 >= 1.4.0
+    - numba >=0.39.0
+    - numpy >=1.15.0
+    - numpy-sugar >=1.2.8
     - pandas-plink >=1.2.28
-    - pypandoc >=1.4
-    - pytest
-    - pytest-doctestplus >=0.1.3
+    - pandas >=0.23.4
+    - pytest >=3.7.0
+    - pytest-doctestplus >=0.2.0
     - python
-    - scikit-learn >=0.19.1
+    - scikit-learn >=0.18.0
     - scipy >=1.1.0
-    - seaborn >=0.8.1
     - statsmodels >=0.9.0
-    - tqdm >=4.23.4
+    - tqdm >=4.25.0
+    - xarray >=0.10.9
+    - monotonic >=1.5
+    - limix-lmm >=0.1.2 # needs recipe
+    - struct-lmm >=0.2.1 # needs recipe
 
 test:
   requires:
