--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "limix" %}
-{% set version = "1.0.18" %}
-{% set sha256 = "486f55baeeacb204965ed1baf01bf717bb43718240453b884035d526ac4b8bbb" %}
+{% set version = "3.0.0" %}
+{% set sha256 = "17be1695918bec0e76804092724aa529ac69027464b7449551b020df8d576784" %}
 
 package:
   name: {{ name|lower }}
@@ -12,45 +12,55 @@ source:
   sha256: {{ sha256 }}
 
 build:
+  noarch: python
   number: 0
-  skip: True  # [win or linux32]
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 requirements:
   build:
-    - python
-    - setuptools
-    - pytest-runner
     - cython
+    - numpy >=1.16.2
+    - pip
+    - pytest-runner
+    - python >3
+    - setuptools
     - toolchain
-    - numpy >=1.14.5
   run:
+    - appdirs >=1.4.3
     - asciitree >=0.3.3
-    - bgen-reader >=2.0.4
-    - brent-search >=1.0.33
-    - dask[distributed,array,dataframe] >=0.18.1
-    - glimix-core >=1.5.2
-    - h5py >=2.8.0
-    - humanfriendly >=4.12.1
-    - joblib >=0.12.0
-    - limix-core >=1.0.2
-    - limix-legacy >=0.8.12
-    - matplotlib >=2.2.2
-    - ndarray-listener >=1.1.2
-    - numba >=0.38.1
-    - numpy  >=1.14.5
-    - numpy-sugar >=1.2.5
-    - pandas >=0.23.3
-    - pandas-plink >=1.2.28
-    - pypandoc >=1.4
-    - pytest
-    - pytest-doctestplus >=0.1.3
-    - python
-    - scikit-learn >=0.19.1
-    - scipy >=1.1.0
-    - seaborn >=0.8.1
+    - bgen-reader >=3.0.5
+    - blessings >=1.7
+    - brent-search >=2.0.0
+    - click >=7.0
+    - colorama >=0.4.1
+    - dask[array,dataframe] >=1.2.0
+    - glimix-core >=3.1.5
+    - h5py >=2.9.0
+    - humanfriendly >=4.18
+    - joblib >=0.13.2
+    - limix-plot >=0.1.0
+    - matplotlib >=3.0.3
+    - monotonic >=1.5
+    - ndarray-listener >=2.0.0
+    - netcdf4 >=1.5.0.1
+    - numba >=0.43.1
+    - numpy >=1.16.2
+    - numpy-sugar >=1.4.1
+    - optimix >=3.0.3
+    - pandas >=0.24.2
+    - pandas-plink >=1.2.30
+    - pytest >=4.4.1
+    - pytest-doctestplus >=0.3.0
+    - python >3
+    - scikit-learn >=0.20.3
+    - scipy >=1.2.1
+    - seaborn >=0.9.0
+    - setuptools >=41.0.0
+    - sphinxcontrib-programoutput >=0.14
     - statsmodels >=0.9.0
-    - tqdm >=4.23.4
+    - struct-lmm >=0.2.4
+    - tqdm >=4.31.1
+    - xarray >=0.12.1
 
 test:
   requires:
